--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-color: #005f73;
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -24,7 +29,7 @@ p {
 
 .caja {
     background-color: #f2f2f2;
-    border: 2px solid #005f73;
+    border: 2px solid var(--primary-color);
     border-radius: 12px;
     padding: 20px;
     max-width: 900px;
@@ -72,12 +77,18 @@ nav a:hover {
     color: #94d2bd;
     text-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     transform: translate3d(0, 5px, 0);
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
 }
 
 .nav-active {
     background-color: #f2f2f2;
-    color: #005f73;
-    border: 2px solid #005f73;
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
+}
+
+.nav-active:hover {
+    color: var(--primary-color);
 }
 
 .hamburger {
@@ -156,7 +167,7 @@ nav a:hover {
     bottom: 20px;
     right: 20px;
     display: none;
-    background-color: #005f73;
+    background-color: var(--primary-color);
     color: #fff;
     border: none;
     border-radius: 50%;
@@ -171,6 +182,6 @@ nav a:hover {
 
 .btn-back-to-top:hover {
     background-color: #f2f2f2;
-    color: #005f73;
+    color: var(--primary-color);
     transform: scale(1.1);
 }
