--- a/stylesfb.css
+++ b/stylesfb.css
@@ -89,7 +89,11 @@
             display:none;
             opacity: 0;
         }
-     
+        #container-parametrosyargumentos {
+            display:none;
+            opacity: 0;
+        }
+
 
         #activo1:checked ~ #container-funcion {
             display: block;
@@ -111,6 +115,11 @@
             display: block;
             opacity: 1;
            
+        }
+           #activo5:checked ~ #container-parametrosyargumentos {
+                display: block;
+                opacity: 1;
+             
         }
 
         #video-background {
